# cptpy

./: .gitignore  METHODOLOGY.md  cca.py  compare_all.py  compare_all_v2.py  config.yaml  data_io.py  main.py  output.py  plot_forecast.py  plot_forecast2.py  plot_skill.py  pyproject.toml  utils.py
cptpy/: data_io.py  download.py  eof.py  main.py  output.py  plot_comparison.py  preprocess.py  probabilistic.py  run_all.py  skill.py  transform.py
