[project]
name = "cptpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "typer>=0.24.1",
    "xarray>=2026.4.0",
]

[project.scripts]
cptpy = "cptpy.main:app"

[tool.setuptools]
packages = ["cptpy"]

[tool.uv]
package = true
